--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="source\EngineMin.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="source\TempClass.h">
+    <ClInclude Include="source\Application.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClCompile Include="source\pch.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="source\TempClass.cpp">
+    <ClCompile Include="source\Application.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
