--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="source\RenderAPI\DirectX12\Commands\D12CommandList.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGISwapChain.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="source\EngineSetting.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\pch.cpp">
@@ -81,6 +87,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\RenderAPI\DirectX12\Commands\D12CommandList.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGISwapChain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
