feat: creating buffers on the GPU

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -95,7 +95,9 @@
     <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGIAdapter.h" />
     <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGIFactory.h" />
     <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGISwapChain.h" />
+    <ClInclude Include="source\RenderAPI\DirectX12\Resource\D12Resource.h" />
     <ClInclude Include="source\RenderAPI\RenderAPI.h" />
+    <ClInclude Include="source\RenderAPI\RenderDataTypes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\RenderAPI\DirectX12\Commands\D12CommandList.cpp" />
@@ -111,6 +113,7 @@
     <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGIAdapter.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGIFactory.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGISwapChain.cpp" />
+    <ClCompile Include="source\RenderAPI\DirectX12\Resource\D12Resource.cpp" />
     <ClCompile Include="source\RenderAPI\RenderAPI.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
