--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -95,6 +95,7 @@
     <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGIAdapter.h" />
     <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGIFactory.h" />
     <ClInclude Include="source\RenderAPI\DirectX12\DXGI\DXGISwapChain.h" />
+    <ClInclude Include="source\RenderAPI\DirectX12\Pipeline\D12RootSignature.h" />
     <ClInclude Include="source\RenderAPI\DirectX12\Pipeline\HLSLShader.h" />
     <ClInclude Include="source\RenderAPI\DirectX12\Resource\D12Resource.h" />
     <ClInclude Include="source\RenderAPI\RenderAPI.h" />
@@ -114,6 +115,7 @@
     <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGIAdapter.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGIFactory.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\DXGI\DXGISwapChain.cpp" />
+    <ClCompile Include="source\RenderAPI\DirectX12\Pipeline\D12RootSignature.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\Pipeline\HLSLShader.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\Resource\D12Resource.cpp" />
     <ClCompile Include="source\RenderAPI\RenderAPI.cpp" />
