--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="source\RenderAPI\DirectX12\Pipeline\D12RootSignature.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="source\RenderAPI\DirectX12\Pipeline\D12PipelineState.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\pch.cpp">
@@ -111,6 +114,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\RenderAPI\DirectX12\Pipeline\D12RootSignature.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RenderAPI\DirectX12\Pipeline\D12PipelineState.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
