feat: creating and binding a constanbuffer

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -101,6 +101,7 @@
     <ClInclude Include="source\RenderAPI\DirectX12\Resource\D12Resource.h" />
     <ClInclude Include="source\RenderAPI\RenderAPI.h" />
     <ClInclude Include="source\RenderAPI\RenderDataTypes.h" />
+    <ClInclude Include="source\Utilities\Utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\RenderAPI\DirectX12\Commands\D12CommandList.cpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="source\RenderAPI\DirectX12\Pipeline\HLSLShader.cpp" />
     <ClCompile Include="source\RenderAPI\DirectX12\Resource\D12Resource.cpp" />
     <ClCompile Include="source\RenderAPI\RenderAPI.cpp" />
+    <ClCompile Include="source\Utilities\Utilities.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
