--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="source\Utilities\Utilities.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="source\RenderAPI\DirectX12\Descriptors\D12DescriptorHeap.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\pch.cpp">
@@ -123,6 +126,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\Utilities\Utilities.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\RenderAPI\DirectX12\Descriptors\D12DescriptorHeap.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
