--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="source\RenderAPI\DirectX12\MemoryManagent\BufferUploader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="source\System\Timers\TimeStep.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\pch.cpp">
@@ -135,6 +138,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\RenderAPI\DirectX12\MemoryManagent\BufferUploader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\System\Timers\TimeStep.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
